--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,17 +87,19 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #fff;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration-line: underline;
+  text-underline-offset: 0.25em;
+  text-decoration-thickness: 0.025em;
+  text-decoration-color: rgba(0,0,0,.3);
+}
+
+a:hover {
+  color: #000;
 }
 
 @media (prefers-color-scheme: dark) {
