--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,22 +14,38 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 8rem 0;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.container {
+  max-width: var(--max-width);
+  padding-left: var(--space-2);
+  padding-right: var(--space-2);
+}
+
+.content {
+  width: 100%;
 }
 
 /* Vana styles */
+
 .main h1 {
-  font-size: 52px;
+  font-size: var(--heading-size-1);
+}
+
+.field {
+  height: 48px;
+  border-radius: 4px;
+  font-size: inherit;
 }
 
 .input {
-  height: 48px;
+  composes: field;
   background-color: rgb(245, 245, 244);
-  border-radius: 8px;
   padding-left: 1rem;
   border: 2px solid transparent;
   outline: none;
-  font-size: 15px;
   width: 100%;
 }
 
@@ -43,13 +59,11 @@
 }
 
 .button {
+  composes: field;
   width: 100%;
-  height: 40px;
   cursor: pointer;
   border: 1px solid #fff;
   background-color: #fff;
-  font-size: 15px;
-  border-radius: 3px;
   transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
@@ -75,23 +89,15 @@
   composes: button;
 }
 
-.content {
-  margin-top: 1.5rem;
-}
-
 .description {
-  margin-top: 8px;
   color: rgb(114, 114, 114);
-  font-family: sans-serif;
-  font-size: 13px;
-  margin-bottom: 4px;
+  font-size: var(--font-size-3);
 }
 
 .error {
   margin-top: 24px;
   color: rgb(239, 68, 68);
-  font-family: sans-serif;
-  font-size: 13px;
+  font-size: var(--font-size-3);
   text-transform: lowercase;
 }
 
@@ -122,7 +128,7 @@
   justify-content: space-between;
   height: 64px;
   width: 100%;
-  padding: 8px 24px;
+  padding: var(--space-4) var(--space-2);
   background-color: #fff;
   z-index: 1;
   border-bottom: 1px solid rgb(245, 245, 244);
@@ -147,16 +153,18 @@
 
 /* Mobile */
 @media (max-width: 700px) {
-  .center {
-    padding: 8rem 0 6rem;
+  .main h1 {
+    font-size: var(--heading-size-2);
   }
-
+  .center {
+    padding-top: 8rem;
+    padding-bottom: 6rem;
+  }
   .center::before {
     transform: none;
     height: 300px;
   }
 }
-
 
 @keyframes rotate {
   from {
