--- a/components/dialog/Dialog.module.css
+++ b/components/dialog/Dialog.module.css
@@ -28,5 +28,5 @@
   border: 1px solid #888;
   padding: var(--space-2);
   width: 100%;
-  max-width: var(--max-width);
+  max-width: var(--dialog-width);
 }
