--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,13 +55,14 @@ h6 {
 }
 
 /* BASE STYLES */
+/* clamp computer: https://codesandbox.io/s/clamp-linear-intepolation-based-on-viewport-width-builder-forked-c37i3 */
 :root {
   --max-width: 680px;
   --dialog-width: 584px;
-  --space-1: 48px;
-  --space-2: 24px;
-  --space-3: 16px;
-  --space-4: 9px;
+  --space-1: clamp(32px, 1.4988rem + 1.937vw, 48px);
+  --space-2: clamp(16px, 0.7494rem + 0.9685vw, 24px);
+  --space-3: clamp(12px, 0.6247rem + 0.4843vw, 16px);
+  --space-4: clamp(8px, 0.4687rem + 0.1211vw, 9px);
   --heading-size-1: 36px;
   --heading-size-2: 30px;
   --heading-size-3: 24px;
