Add text to image loading state

--- a/components/prompt/Prompt.module.css
+++ b/components/prompt/Prompt.module.css
@@ -19,6 +19,29 @@
   background-color: var(--color-input);
 }
 
+@keyframes placeHolderShimmer {
+  0% {
+    background-position: -300px 0
+  }
+  100% {
+    background-position: 300px 0
+  }
+}
+
+.galleryImageLoading {
+  composes: galleryImage;
+
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background-color: #f6f7f8;
+  background: linear-gradient(to right, #eeeeee 8%, #ebebeb 18%, #eeeeee 33%);
+  background-size: 300px 204px;
+  position: relative;
+}
+
 .generator {
   display: flex;
   flex-direction: column;
