--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,12 @@ h1,
 h2,
 h3 {
   line-height: 1.1;
+  font-family: var(--font-display);
+  font-weight: 600;
+}
+
+p {
+  color: rgb(120, 113, 108);
 }
 
 /* UTILITIES */
