--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,10 +59,12 @@ h6 {
 :root {
   --max-width: 680px;
   --dialog-width: 584px;
+  --space-lg: 7vh;
   --space-1: clamp(32px, 1.4988rem + 1.937vw, 48px);
-  --space-2: clamp(16px, 0.7494rem + 0.9685vw, 24px);
+  --space-2a: clamp(24px, 1.1241rem + 1.4528vw, 36px);
+  --space-2: clamp(16px, 0.6554rem + 1.3317vw, 27px);
   --space-3: clamp(12px, 0.6247rem + 0.4843vw, 16px);
-  --space-4: clamp(8px, 0.4687rem + 0.1211vw, 9px);
+  --space-4: clamp(9px, 0.4685rem + 0.3632vw, 12px);
   --heading-size-1: clamp(30px, 1.687rem + 0.7264vw, 36px);
   --heading-size-2: clamp(27px, 1.5935rem + 0.3632vw, 30px);
   --heading-size-3: clamp(21px, 1.2185rem + 0.3632vw, 24px);
@@ -70,6 +72,8 @@ h6 {
   --font-size-1: clamp(16px, 0.9373rem + 0.2421vw, 18px);
   --font-size-2: clamp(13px, 0.7498rem + 0.2421vw, 15px);
   --font-size-3: clamp(12px, 0.7187rem + 0.1211vw, 13px);
+  --color-gray: #666;
+  --color-border: #ccc;
   --color-input: rgb(245, 245, 244);
 }
 
@@ -95,13 +99,10 @@ a:hover {
 h1,
 h2,
 h3 {
-  line-height: 1.1;
   font-family: var(--font-display);
-  font-weight: 600;
-}
-
-p {
-  color: rgb(120, 113, 108);
+  font-weight: 900;
+  line-height: 1.1;
+  letter-spacing: -0.008em;
 }
 
 /* UTILITIES */
@@ -109,8 +110,11 @@ p {
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   margin-top: var(--space-1);
 }
+.space-y-2a > :not([hidden]) ~ :not([hidden]) {
+  margin-top: var(--space-2a);
+}
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  margin-top: var(--space-2);
+  margin-top: var(--space-2a);
 }
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   margin-top: var(--space-3);
@@ -141,7 +145,7 @@ p {
 }
 
 .text-gray {
-  color: #666;
+  color: var(--color-gray);
 }
 
 .text-error {
