--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -165,6 +165,11 @@
   background-color: rgb(245, 245, 244);
 }
 
+.logoutBtn {
+  cursor: pointer;
+  width: 20px;
+}
+
 @keyframes rotation {
   from {
     transform: rotate(0deg);
