revise logout button

--- a/components/auth/Logout.module.css
+++ b/components/auth/Logout.module.css
@@ -1,4 +1,10 @@
-.logoutBtn {
+.logoutContainer {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   cursor: pointer;
-  width: 20px;
+}
+
+.logoutBtn {
+  width: 11px;
 }
