--- a/styles/globals.css
+++ b/styles/globals.css
@@ -189,3 +189,18 @@ h3 {
 .pl-4 {
   padding-left: var(--space-4);
 }
+.pb-lg {
+  padding-bottom: var(--space-lg);
+}
+.py-2 {
+  padding-top: var(--space-2);
+  padding-bottom: var(--space-2);
+}
+.py-3 {
+  padding-top: var(--space-3);
+  padding-bottom: var(--space-3);
+}
+.py-4 {
+  padding-top: var(--space-4);
+  padding-bottom: var(--space-4);
+}
