--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,7 +11,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   /* align-items: center; */
   position: relative;
   padding-top: var(--space-lg);
