--- a/styles/globals.css
+++ b/styles/globals.css
@@ -211,6 +211,10 @@ h3,
   padding-left: var(--space-4);
 }
 
+.py-1 {
+  padding-top: var(--space-1);
+  padding-bottom: var(--space-1);
+}
 .py-2 {
   padding-top: var(--space-2);
   padding-bottom: var(--space-2);
