--- a/components/nav/Nav.module.css
+++ b/components/nav/Nav.module.css
@@ -1,13 +1,16 @@
-.nav {
+.container {
   position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+.nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 64px;
-  width: 100%;
   padding: var(--space-4) var(--space-2);
   background-color: #fff;
-  z-index: 1;
   border-bottom: 1px solid #eee;
 }
 
