--- a/components/page-notice/PageNotice.module.css
+++ b/components/page-notice/PageNotice.module.css
@@ -2,24 +2,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: black;
+  background-color: var(--color-gray-100);
   height: 36px;
 }
 
 .content {
   display: inline-flex;
   gap: 0.25rem;
-  font-size: clamp(12px, 0.7187rem + 0.1211vw, 13px);
+  font-size: var(--font-size-3);
   line-height: 1.5;
-  color: rgb(168 162 158);
+  color: var(--color-gray-800);
 }
 
 .link {
   display: inline-flex;
   gap: 0.125rem;
-  color: rgb(168 162 158);
+  color: var(--color-gray-800);
 }
 
 .link:hover {
-  color: white;
+  color: black;
 }
